bk_ida/gccida/c1/refers_to_regno_for_reload_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6552:6: error: use of undeclared identifier 'v11'
rtx *v11; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6553:4: error: expected ';' after expression
rtx v12; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6553:5: error: use of undeclared identifier 'v12'
rtx v12; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6558:6: error: use of undeclared identifier 'v17'
rtx *v17; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6564:6: error: use of undeclared identifier 'v23'
rtx *v23; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6579:6: error: use of undeclared identifier 'v39'
rtx *v39; // [rsp+10h] [rbp-48h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6588:1: error: use of undeclared identifier 'v39'
v39 = loc; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6599:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v18.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6609:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v36 = ( ( unsigned int)( mode_class_0[v37] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6642:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v33] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6695:60: error: expected expression
v29 = refers_to_regno_for_reload_p( v20, endregno, *( rtx *)( v28 + 8 * v27 - 8), loc); 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6696:7: error: use of undeclared identifier 'v39'
loc = v39; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6712:14: error: expected expression
v23 = ( rtx *)&rtx->fld[v19]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6712:1: error: use of undeclared identifier 'v23'
v23 = ( rtx *)&rtx->fld[v19]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6713:6: error: use of undeclared identifier 'v23'
if ( v23 != loc ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6722:53: error: use of undeclared identifier 'v23'
v24 = refers_to_regno_for_reload_p( v20, endregno, *v23, loc); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6723:7: error: use of undeclared identifier 'v39'
loc = v39; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6741:14: error: expected expression
v11 = ( rtx *)( fld->rtwint + 8); 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/reload.c:6741:1: error: use of undeclared identifier 'v11'
v11 = ( rtx *)( fld->rtwint + 8); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/refers_to_regno_for_reload_p/src/obj/reload.o] Error 1
